<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- 01.总论 -->
    <string name="app_name">嘉友</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <!-- 02.功能-->
    <string name="tab_order">订单</string>
    <string name="tab_track">跟踪</string>
    <string name="tab_addoil">加油</string>
    <string name="tab_set">设置</string>
    <!-- 03.操作 -->
 	<string name="action_settings">设置</string>
    <string name="action_login">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="action_ok">&#160;&#160;&#160;&#160;确&#160;&#160;&#160;&#160;&#160;&#160;认&#160;&#160;&#160;&#160;</string>
    <string name="action_editinfo">编辑信息</string>
    <string name="action_no">取  消</string>
    <string name="action_resign">注  册</string>
    <string name="action_delAll">清空</string>
    <string name="action_delItem">删除</string>
    <string name="action_upload">上传</string>
    <string name="action_exit">退出</string>
    <string name="action_reset">&#160;&#160;&#160;&#160;重&#160;&#160;&#160;&#160;&#160;&#160;置&#160;&#160;&#160;&#160;</string>
    <string name="action_sendtime">设置时间(发)</string>
    <string name="action_update">更新</string>
    <string name="action_save">上传</string>
    <string name="action_list">列表</string>
    <string name="action_pictures">拍&#160;&#160;照</string>
    <string name="action_search">搜索</string>
    <string name="action_flush">扫码</string>
    <string name="action_manual">手动</string>
    <string name="action_detail">详情</string>
    <string name="action_about">关于</string>
    <string name="action_oil_management">油控管理</string>
    <string name="action_mile_management">里程管理</string>
    <string name="action_auto_focus">自动对焦</string>
    <!-- 04.功能提示 -->
    <string name="tip_id">账  号</string>
    <string name="tip_pwd">密  码</string>
    <string name="tip_ensure">确  认</string>
    <string name="tip_name">电  话</string>
    <string name="tip_call">昵  称</string>
    <string name="tip_note">备  注</string>
    <string name="tip_result">结  果</string>
    <string name="tip_payway">付款方式</string>
    <string name="tip_oilcode">燃料型号</string>
      <string name="tip_oilkind">燃料类型</string>
    <!-- 05.操作提示 -->
    <string name="oper_getgoods">提	货</string>
    <string name="oper_port">港	口</string>
    <string name="oper_box">箱	管</string>
    <string name="oper_harbor">口	岸</string>
    <string name="oper_resign">签	收</string>
    <string name="oper_goods">货物管理</string>
    <string name="oper_switch">选择操作</string>
    <string name="oper_addtruck">增加车辆</string>
    <string name="oper_oilcheck">油耗监管</string>
    <string name="oper_hisinfo">历史信息</string>
    
    
    
    <string name="tip_dialog_wait">请等待 ..</string>
    <string name="tip_dialog_done">正在访问..</string>
    <string name="tip_state">状&#160;&#160;态</string>
    <string name="tip_trans">运输方式</string>
    <string name="tip_tkind">车型</string>
    <string name="tip_oid">运输号</string>
    <string name="tip_percount">单车件数</string>
    <string name="tip_perweight">单车吨数</string>
    <string name="tip_tformatweight">标重(车)</string>
    <string name="tip_tcount">车数</string>
    <string name="tip_tid">车辆编号</string>
    <string name="tip_bid">业务编号</string>
    
    <string name="tip_success">成功</string>
    <string name="tip_fail">失败</string>
    <string name="tip_exit">退出？</string>
    <string name="tip_null">为空</string>
    <string name="tip_exception">请输入异常信息</string>
    <string name="tip_truck_num">请输入车号</string>
    <string name="tip_data">请输入条形码</string>
    <string name="tip_update">更新原数据</string>
    <string name="tip_city">城市</string>
    <string name="tip_liters">升数</string>
    <string name="tip_money">金额</string>
    <string name="tip_mile">公里数</string>
    <string name="tip_oil_card_id">油卡卡号</string>
    <string name="tip_oil_card_money">卡上余额</string>
    <string name="tip_query">查询结果</string>
    
    <string name="scan_title">请圈进条形码/二维码</string>
    <string name="title_order">订单信息</string>
    <string name="title_track">追踪信息</string>
    <string name="title_oil">油控信息</string>
    <string name="title_setting">设置信息</string>
    <string name="content_space"></string>
    <string name="result_exit">已经跳出程序</string>
    <!-- 测试 -->
    <string name="dateSliderTitle">Selected date</string>
    <string name="dgtrainwagonno">铁路车皮号</string>
	<string name="dgtraintype">铁路车型</string>
	<string name="dgtrainwaybillno">铁路运单号</string>
	<string name="dgtrainsinglenum">铁路单车件数</string>
	<string name="dgtrainsingleton">铁路单车吨数</string>
	<string name="dgtrainwagonkg">铁路车皮标重</string>
	<string name="dloadingtime">装车时间</string>
	<string name="dgtrainstartdate">铁路发送日</string>
    
    <string name="truckgetinfo">调度取信息</string>
    <string name="trucksendinfo">调度送信息</string>
    <string name="seaino">铅封号</string>
    <string name="dttrailerno">拖车号</string>
    <string name="dtrailermodelscoll">拖车型</string>
    <string name="dtsingletrailernum">单车件数</string>
    <string name="dtsingletrailerton">单车吨数</string>
    
    <string name="svehiclescoll">车数</string>
    <string name="dtpickupdate">提货时间</string>
    
    <string name="dtstartdate">发车时间</string>
    <!--口岸-->
    <string name="preloadcarno">换装车号</string>
    <string name="preloadcarnum">换装车数</string>
    <string name="pfactchportdate">实际到中方口岸时间</string>
    <string name="preloaddate">换装时间</string>
    <string name="pstartdate">发车时间/出境时间</string>
    <string name="ppassdate">放行时间</string>
    <string name="mpackingdate">口岸装箱日</string>
    <!--箱管-->
    <string name="ecarryaddress">提箱地</string>
    <string name="ecarrydate">提箱时间</string>
    <string name="echinaporttime">返回中方口岸时间</string>
    <string name="eportstorageroomtime">返回口岸库房时间</string>
    <string name="etimechangeofport">口岸换装时间</string>
    <string name="echangenumber">换装车号</string>
    <string name="efeeofflinetime">下线结费时间</string>
    <string name="erailwayofflinetime">铁路下线时间</string>
    <string name="eactualreturntime">实际回空时间</string>
    <!--港口-->
    <string name="ptoportdate">到港时间</string>
    <string name="preinvoicedate_port">换单时间</string>
    <string name="pjinchangdate">进场时间</string>
    <string name="ppackingtime">装箱时间</string>
    <string name="bssj">报数时间</string>
    <string name="fcchgk">发车车号</string>
    <string name="dcjsgkdz">单车件数</string>
    <string name="dcdsgkdz">单车吨数</string>
    <string name="dsgkdz">车数</string>
    <string name="startdate">发车时间</string>
    <string name="blhtl">铁路班列号</string>
    <string name="cargostatusport">货物状态</string>

    
    
    
    
    
    
    
    
    

    <string name="t1">1</string>
</resources>