<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <include
        android:id="@+id/includeTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        layout="@layout/topbar" />
    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/includeTop"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:background="#90909090" />
    <Button
        android:id="@+id/btnOk"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="2dp"
        android:background="@drawable/btn01"
        android:text="@string/action_ok"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnOk"
        android:layout_below="@id/separator1"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:orientation="vertical"
        android:visibility="visible" >
    <Button
        android:id="@+id/btptoportdate"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/btn07"
        android:text="@string/ptoportdate"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btpreinvoicedate_port"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/btn07"
        android:text="@string/preinvoicedate_port"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btpjinchangdate"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/btn07"
        android:text="@string/pjinchangdate"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btppackingtime"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/btn07"
        android:text="@string/ppackingtime"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btbssj2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/btn07"
        android:text="@string/bssj"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="是否偏心/偏重:" />

        <RadioGroup
            android:id="@+id/sfpxpz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="是"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/notlean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:checked="true"
                android:text="否"
                android:textColor="#000000" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layTruck"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnOk"
        android:layout_below="@id/separator1"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btbssj"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn07"
            android:text="@string/bssj"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etfcchgk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fcchgk"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etdcjsgkdz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dcjsgkdz" />

            <EditText
                android:id="@+id/etdcdsgkdz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dcdsgkdz" />

            <EditText
                android:id="@+id/etdsgkdz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dsgkdz" />
        </LinearLayout>

        <Button
            android:id="@+id/btstartdate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn07"
            android:text="@string/startdate"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layTrain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnOk"
        android:layout_below="@id/separator1"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="5sp"
        android:orientation="vertical"
        android:visibility="gone">
        <EditText
            android:id="@+id/etblhtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/blhtl" />
        <EditText
            android:id="@+id/etdgtrainwagonno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dgtrainwagonno" />
        <EditText
            android:id="@+id/etdgtraintype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dgtraintype" />
        <EditText
            android:id="@+id/etdgtrainwaybillno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dgtrainwaybillno" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etdgtrainsinglenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dgtrainsinglenum" />

            <EditText
                android:id="@+id/etdgtrainsingleton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dgtrainsingleton" />
        </LinearLayout>
        <EditText
            android:id="@+id/etdgtrainwagonkg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dgtrainwagonkg" />
        <Button
            android:id="@+id/btdgtrainstartdate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn07"
            android:text="@string/dgtrainstartdate"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>